[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/wasp.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_writing_0.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_writing_1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_white_0.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/wasps/wasp_white_1.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/bee_hit.wav" type="Sample" id=8]
[ext_resource path="res://assets/sound/sound_explode.wav" type="Sample" id=9]
[ext_resource path="res://assets/sprites/splat/splat_0.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/splat/splat_1.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/splat/splat_2.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/splat/splat_3.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/splat/splat_4.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/gibs/gibs_5.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/gibs/gibs_0.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "writing",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "white",
"speed": 10.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/bee_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/sound_explode = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="Wasp" type="Area2D" groups=[
"Enemy",
"Wasp",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}
RailPath = "../../rail"
writing = false
disabled = false
follow_right = true

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
playing = true

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="sfx" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[node name="explosion" type="AnimatedSprite" parent="."]

visibility/visible = false
frames = SubResource( 4 )
animation = "default"

[node name="wings0" type="Particles2D" parent="."]

transform/rot = 90.0
config/amount = 2
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/flip_h = true
config/texture = ExtResource( 15 )
config/v_frames = 4
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 32.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="wings1" type="Particles2D" parent="."]

transform/rot = -90.0
config/amount = 2
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/texture = ExtResource( 15 )
config/v_frames = 4
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 32.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="legs0" type="Particles2D" parent="."]

transform/rot = -90.0
config/amount = 3
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/texture = ExtResource( 16 )
config/v_frames = 4
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 32.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = -1.0

[node name="legs1" type="Particles2D" parent="."]

transform/rot = 90.0
config/amount = 3
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/flip_h = true
config/texture = ExtResource( 16 )
config/v_frames = 4
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 32.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = -1.0

[node name="StunTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="FlashTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="FollowTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="FleeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="ShootTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="shootfrom" type="Position2D" parent="."]

transform/pos = Vector2( 0, 6 )
transform/rot = 180.0

[connection signal="area_enter" from="." to="." method="_on_asteroid_area_enter"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]

[connection signal="timeout" from="FollowTimer" to="." method="_on_FollowTimer_timeout"]

[connection signal="timeout" from="FleeTimer" to="." method="_on_FleeTimer_timeout"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


